--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>A Dolgok, Amiket</title>
     <link rel="stylesheet" href="js/css/selectors.css">
     <link rel="stylesheet" href="bootstrap/bootstrap-5.0.1-dist/bootstrap-5.0.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fonts/parisienne/Parisienne/Parisienne-Regular.ttf">
-    <link rel="stylesheet" href="fonts/roboto/Roboto/Roboto-Regular.ttf">
+    <link rel="text/css" href="fonts/parisienne/Parisienne/Parisienne-Regular.ttf">
+    <link rel="text/css" href="fonts/roboto/Roboto/Roboto-Regular.ttf">
 </head>
 
 <body>
